--- a/case-complexity.tex
+++ b/case-complexity.tex
@@ -4,72 +4,69 @@
 
 \section{The pattern}
 
-
 \ex. \tsc{int:nom}, \tsc{ext:acc}
 \a. \tsc{nom} not attested
-\bg. jah þ-o-ei ist us Laudeikaion jus ussiggwaid\\
- and D-\tsc{f.sg.acc}-\tsc{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
+\bg. jah þoei ist us Laudeikaion jus ussiggwaid\\
+ and what.\tsc{acc} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
  `and read that which is from Laodicea' \hfill (Colossians 4:16, gloss and translation by \citealt[357]{harbert1978})
 
 \ex. \tsc{int:nom}, \tsc{ext:dat}
 \a. \tsc{nom} not attested
-\bg. þ-aim-ei iupa sind fraþjaiþ\\
- D-\tsc{pl.dat}-\tsc{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
- `set your mind on those which are above' \hfill (Colossians 3:2, gloss and translation by \citealt[339]{harbert1978})
+\bg. þaimei iupa sind fraþjaiþ\\
+ what.\tsc{dat} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
+ `set your mind on those which are above' \flushfill{(Colossians 3:2, gloss and translation by \citealt[339]{harbert1978})}
 
 \ex. \tsc{int:acc}, \tsc{ext:nom}
-\ag. þ-an-ei frijos siuks ist\\
- D-\tsc{m.sg.acc}-\tsc{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
- `the one whom you love is sick' \hfill (John 11:3, gloss and translation by \citealt[342]{harbert1978})
+\ag. þanei frijos siuks ist\\
+ who.\tsc{acc} love\scsub{[acc]} sick is\scsub{[nom]}\\
+ `the one whom you love is sick' \flushfill{(John 11:3, gloss and translation by \citealt[342]{harbert1978})}
 \b. \tsc{nom} not attested
 
 \ex. \tsc{int:acc}, \tsc{ext:dat}
 \a. \tsc{acc} not attested
-\bg. hva nu wileiþ ei taujau þ-amm-ei qiþiþ þiudan Iudaie?\\
- what now want that do\scsub{[dat]} D-\tsc{m.sg.dat}-\tsc{comp} say\scsub{[acc]} king {of Jews}\\
- `what now do you wish that I do to him whom you call King of the Jews?' \hfill (Mark 15:12, gloss and translation by \citealt[339]{harbert1978})
+\bg. hva nu wileiþ ei taujau þammei qiþiþ þiudan Iudaie?\\
+ what now want that do\scsub{[dat]} who.\tsc{dat} say\scsub{[acc]} king {of Jews}\\
+ `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{(Mark 15:12, gloss and translation by \citealt[339]{harbert1978})}
 
 \ex. \tsc{int:dat}, \tsc{ext:nom}
-\ag. iþ þ-amm-ei leitil fraletada leitil frijod\\
- but D-\tsc{m.sg.dat}-\tsc{comp} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
- `but the one whom little is forgiven loves little' \hfill (Luke 7:47, gloss and translation by \citealt[342]{harbert1978})
+\ag. iþ þammei leitil fraletada leitil frijod\\
+ but who.\tsc{dat} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
+ `but the one whom little is forgiven loves little' \flushfill{(Luke 7:47, gloss and translation by \citealt[342]{harbert1978})}
 \b. \tsc{nom} not attested
 
 \ex. \tsc{int:dat}, \tsc{ext:acc}, is with a preposition
-\ag. ushafjands ana þ-amm-ei lag\\
- {picking up}\scsub{[acc]}\scsub{[dat]} on D-\tsc{m.sg.dat}-\tsc{comp} lay\\
- `picking up that on which he lay' \hfill (Luke 5:25, gloss and translation by \citealt[343]{harbert1978})
+\ag. ushafjands ana þammei lag\\
+ {picking up}\scsub{[acc]}\scsub{[dat]} on what.\tsc{dat} lay\\
+ `picking up that on which he lay' \flushfill{(Luke 5:25, gloss and translation by \citealt[343]{harbert1978})}
 \b. \tsc{acc} not attested
 
 \begin{table}[h]
   \center
   \caption {Case attraction in headless relatives in Gothic}
-    \begin{minipage}{0.8\linewidth}
-      \begin{tabularx}{\textwidth}{c|Y|Y|Y}
-        \toprule
-          \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
-              & \tsc{[nom]}
-              & \tsc{[acc]}
-              & \tsc{[dat]}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[nom]}
-              & \colorbox{LG}{\tsc{nom}}
-              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
-              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[acc]}
-              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{?\tsc{nom}}
-              &	\colorbox{LG}{\tsc{acc}}
-              &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[dat]}
-              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{nom}}
-              &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{acc}}
-              & \colorbox{LG}{\tsc{dat}}
-              \\
-        \bottomrule
-      \end{tabularx}
-    \end{minipage}
+    \begin{tabular}{c|c|c|c}
+      \toprule
+        \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
+            & \tsc{[nom]}
+            & \tsc{[acc]}
+            & \tsc{[dat]}
+            \\ \cmidrule{1-4}
+        \tsc{[nom]}
+            & \colorbox{LG}{\tsc{nom}}
+            & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
+            & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
+            \\ \cmidrule{1-4}
+        \tsc{[acc]}
+            & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{?\tsc{nom}}
+            &	\colorbox{LG}{\tsc{acc}}
+            &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
+            \\ \cmidrule{1-4}
+        \tsc{[dat]}
+            & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{nom}}
+            &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{acc}}
+            & \colorbox{LG}{\tsc{dat}}
+            \\
+      \bottomrule
+    \end{tabular}
 \end{table}
 
 \ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
@@ -94,13 +91,12 @@
 \begin{table}[h]
   \center
 	\caption {Transparent case containment in Khanty \citep[16]{nikolaeva1999}}
-	\begin{minipage}{0.7\linewidth}
-		\begin{tabularx}{\textwidth}{c *{3}{Z}}
+		\begin{tabular}{clll}
 		\toprule
               & \tsc{1sg}
               & \tsc{3sg}
               & \tsc{1pl}                               \\
-		\midrule
+		\cmidrule{2-4}
     \tsc{nom} & ma
               & luw
               & muŋ                                     \\
@@ -111,8 +107,7 @@
               & luw\tbf{-e:l}-\textcolor{DG}{\tbf{na}}
               & muŋ\tbf{-e:w}-\textcolor{DG}{\tbf{na}}  \\
 		\bottomrule
-		\end{tabularx}
-	\end{minipage}
+		\end{tabular}
 \end{table}
 
 
@@ -120,14 +115,13 @@
 \begin{table}[h]
   \center
 	\caption {Transparent case containment in Kalderaš Romani \citep[31-46]{boretzky1994}}
-	\begin{minipage}{0.9\linewidth}
-		\begin{tabularx}{\textwidth}{c *{4}{Z}}
+		\begin{tabular}{cllll}
 		\toprule
               & `brother'
               & `brothers'
               & `girl'
               & `girls'                                   \\
-		\midrule
+		\cmidrule{2-5}
     \tsc{nom} & phral
               & phral-(á)
               & rakl-í
@@ -141,20 +135,18 @@
               & rakl-\tbf{já}-\textcolor{DG}{\tbf{kə}}
               & rakl-já-\tbf{n}-\textcolor{DG}{\tbf{gə}}  \\
 		\bottomrule
-		\end{tabularx}
-	\end{minipage}
+		\end{tabular}
 \end{table}
 
 
 \begin{table}[h]
   \center
 	\caption {Transparent case containment in West Tocharian \citep[23-24]{gippert1987}}
-	\begin{minipage}{0.6\linewidth}
-		\begin{tabularx}{\textwidth}{c *{4}{Z}}
+		\begin{tabular}{cll}
 		\toprule
               & `horses'
               & `men'                                  \\
-		\midrule
+		\cmidrule{2-3}
     \tsc{nom} & yakwi
               & eṅkwi                                  \\
     \tsc{acc} & yakwe-\tbf{ṃ}
@@ -162,8 +154,7 @@
     \tsc{dat} & yäkwe-\tbf{ṃ}-\textcolor{DG}{\tbf{ts}}
               & eṅkwe-\tbf{ṃ}-\textcolor{DG}{\tbf{ts}} \\
 		\bottomrule
-		\end{tabularx}
-	\end{minipage}
+		\end{tabular}
 \end{table}
 
 \ex. \tsc{nom} < \tsc{acc} < \tsc{dat}
@@ -183,23 +174,21 @@ cognates widespread in Indo-European - Icelandic\\
 cognates across Slavic - Russian\\
 cognates across Slavic - Serbian
 
-% \begin{table}[h]
-%   \center
-% 	\caption {ABB patterns in suppletion}
-% 	\begin{minipage}{0.8\linewidth}
-% 		\begin{tabularx}{\textwidth}{c *{5}{Y}}
-% 		\toprule
-%               & Icelandic & Russian   & \multicolumn{3}{l}{Serbian}               \\
-% 		\midrule
-%               & \tsc{1sg} & \tsc{1pl} & \tsc{3sg.f} & \tsc{3sg.m}  & \tsc{3sg.n}  \\
-%     \midrule
-%     \tsc{nom} & ég        & my        &  ona        & oni          & on           \\
-%     \tsc{acc} & \tbf{m}ig & \tbf{n}as & \tbf{nj}u   & \tbf{nji}h   & \tbf{nje}-ga \\
-%     \tsc{dat} & \tbf{m}ér & \tbf{n}am & \tbf{nj}oj  & \tbf{nji}ma  & \tbf{nje}-mu \\
-%     \bottomrule
-% 		\end{tabularx}
-% 	\end{minipage}
-% \end{table}
+\begin{table}[h]
+  \center
+	\caption {ABB patterns in suppletion}
+		\begin{tabular}{cccccc}
+		\toprule
+              & Icelandic           & Russian             & \multicolumn{3}{c}{Serbian}               \\
+		            \cmidrule(lr){2-2}    \cmidrule(lr){3-3}    \cmidrule(lr){4-6}
+              & \tsc{1sg}           & \tsc{1pl}           & \tsc{3sg.f} & \tsc{3sg.m}  & \tsc{3sg.n}  \\
+		            \cmidrule(lr){2-2}    \cmidrule(lr){3-3}    \cmidrule(lr){4-6}
+    \tsc{nom} & ég                  & my                  &  ona        & oni          & on           \\
+    \tsc{acc} & \tbf{m}ig           & \tbf{n}as           & \tbf{nj}u   & \tbf{nji}h   & \tbf{nje}-ga \\
+    \tsc{dat} & \tbf{m}ér           & \tbf{n}am           & \tbf{nj}oj  & \tbf{nji}ma  & \tbf{nje}-mu \\
+    \bottomrule
+		\end{tabular}
+\end{table}
 
 
 
@@ -208,19 +197,17 @@ cognates across Slavic - Serbian
 \begin{table}[h]
   \center
 	\caption {ABB patterns in suppletion}
-	\begin{minipage}{0.4\linewidth}
-		\begin{tabularx}{\textwidth}{c *{2}{Y}}
+		\begin{tabular}{ccc}
 		\toprule
-              & Albanian    & Khinalugh   \\
-		\midrule
-              & \tsc{3sg.f} & \tsc{1sg}   \\
-    \midrule
-    \tsc{nom} & ajo          & zɨ         \\
-    \tsc{acc} & (a)të        & jä         \\
-    \tsc{dat} & asaj         & as(ɨr)     \\
+              & Khinalugh           \\
+		            \cmidrule(lr){2-2}
+              & \tsc{1sg}           \\
+		            \cmidrule(lr){2-2}
+    \tsc{nom} & zɨ                  \\
+    \tsc{acc} & jä                  \\
+    \tsc{dat} & as(ɨr)              \\
     \bottomrule
-		\end{tabularx}
-	\end{minipage}
+		\end{tabular}
 \end{table}
 
 
@@ -228,24 +215,22 @@ cognates across Slavic - Serbian
 \subsubsection{AAB}
 
 
-% \begin{table}[h]
-%   \center
-% 	\caption {ABB patterns in suppletion}
-% 	\begin{minipage}{0.8\linewidth}
-% 		\begin{tabularx}{\textwidth}{c *{3}{Y}}
-% 		\toprule
-%               & Yurok               & \multicolumn{2}{c}{Wardaman} \\
-% 	  \midrule
-%               & \tsc{3sg}           & \tsc{3sg}   & \tsc{3pl}      \\
-%     \midrule
-%     \tsc{nom} & yoɂ(o·t), woɂ(o·t)  & narnaj      & narnaj-bulu    \\
-%     \tsc{acc} & yoɂo·t, woɂo·t      & narnaj-(j)i & narnaj-bulu-yi \\
-%     \tsc{dat} & weyaɂik             & gunga       & wurrugu        \\
-%     \bottomrule
-% 		\end{tabularx}
-% 	\end{minipage}
-% \end{table}
-%
+\begin{table}[h]
+  \center
+	\caption {ABB patterns in suppletion}
+		\begin{tabular}{cccc}
+		\toprule
+              & Yurok                           & \multicolumn{2}{c}{Wardaman}             \\
+		            \cmidrule(lr){2-2}                 \cmidrule(lr){3-4}
+              & \tsc{3sg}                       & \tsc{3sg}         & \tsc{3pl}            \\
+		            \cmidrule(lr){2-2}                 \cmidrule(lr){3-4}
+    \tsc{nom} & \tbf{yoɂ}(o·t), \tbf{woɂ}(o·t)  & \tbf{narnaj}      & \tbf{narnaj}-bulu    \\
+    \tsc{acc} & \tbf{yoɂ}o·t, \tbf{woɂ}o·t      & \tbf{narnaj}-(j)i & \tbf{narnaj}-bulu-yi \\
+    \tsc{dat} & weyaɂik                         & gunga             & wurrugu              \\
+    \bottomrule
+		\end{tabular}
+\end{table}
+
 
 
 
@@ -273,7 +258,9 @@ cognates across Slavic - Serbian
           [\tsc{acc}]
           [\tsc{nomP}
               [\tsc{nom}]
-              [..,roof]
+              [..
+                  [..,roof]
+              ]
           ]
       ]
   ]
