--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -7,58 +7,54 @@
 Old High German only has proper attraction. Modern German only has inverse attraction. Gothic has both proper and inverse attraction.
 
 
-\begin{table}[h]\label{tbl:intextgoth}
+\begin{table}[h]
 	\center
 	\caption {\tsc{int} vs. \tsc{ext} in Modern and Old High German and Gothic}
-	\begin{minipage}{0.6\linewidth}
-		\begin{tabularx}{\textwidth}{c *{2}{Y}}
+		\begin{tabular}{ccc}
 		\toprule
 		 								& \tsc{int>ext}				& \tsc{ext>int}				\\
 										& inverse attraction	& proper attraction		\\
-		\midrule
+										\cmidrule{2-3}
 		Modern German 	& ✔			 							&	*										\\
 		Old High German	& *										&	✔										\\
 		Gothic					&	✔										&	✔										\\
 		\bottomrule
-		\end{tabularx}
-	\end{minipage}
+		\end{tabular}
 \end{table}
 
 
 
 \subsection{Gothic}
 
+
 \begin{table}[h]
   \center
   \caption {Case attraction in headless relatives in Gothic}
-    \begin{minipage}{\linewidth}
-      \begin{tabularx}{\textwidth}{c|Y|Y|Y}
-        \toprule
-          \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
-              & \tsc{[nom]}
-              & \tsc{[acc]}
-              & \tsc{[dat]}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[nom]}
-              & \colorbox{LG}{\tsc{nom}}
-              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
-              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[acc]}
-              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{?\tsc{nom}}
-              &	\colorbox{LG}{\tsc{acc}}
-              &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[dat]}
-              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{nom}}
-              &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{acc}}
-              & \colorbox{LG}{\tsc{dat}}
-              \\
-        \bottomrule
-      \end{tabularx}
-    \end{minipage}
+    \begin{tabular}{c|c|c|c}
+			\toprule
+				\diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
+						& \tsc{[nom]}
+						& \tsc{[acc]}
+						& \tsc{[dat]}
+						\\ \cmidrule{1-4}
+				\tsc{[nom]}
+						& \colorbox{LG}{\tsc{nom}}
+						& \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
+						& \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
+						\\ \cmidrule{1-4}
+				\tsc{[acc]}
+						& \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{?\tsc{nom}}
+						&	\colorbox{LG}{\tsc{acc}}
+						&	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
+						\\ \cmidrule{1-4}
+				\tsc{[dat]}
+						& \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{nom}}
+						&	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{acc}}
+						& \colorbox{LG}{\tsc{dat}}
+						\\
+			\bottomrule
+    \end{tabular}
 \end{table}
-
 
 
 \subsection{Old High German}
@@ -67,18 +63,19 @@ Old High German only has proper attraction. Modern German only has inverse attra
 \ex. \tsc{int:nom}, \tsc{ext:acc}
 \a. \tsc{nom} not attested
 \bg. ih bibringu fona Juda dhen mina berga chisetzit\\
- I educate\scsub{[acc]} about Juda D-\tsc{m.sg.acc} my mountains {through pull}\scsub{[nom]}\\
- `I educate the one who wanders through my mountains about Judas' \hfill (Old High German, Isidor 34:3, \citealt[761]{behaghel1923})
+ I educate\scsub{[acc]} about Juda who.\tsc{acc} my mountains {through pull}\scsub{[nom]}\\
+ `I educate the one who wanders through my mountains about Judas' \flushfill{(Old High German, Isidor 34:3, \citealt[761]{behaghel1923})}
 
 \ex. \tsc{int:nom}, \tsc{ext:dat}
 \a. \tsc{nom} not attested
 \bg. aer antuurta demo zaimo sprah\\
-he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
-`he replied to the one who spoke to him' \hfill (Old High German, Monsee Fragments 7:24, \citealt[761]{behaghel1923}, gloss and translation by \citealt[199]{pittner1995})
+ he replied\scsub{[dat]} who.\tsc{dat} {to him} spoke\scsub{[nom]}\\
+ `he replied to the one who spoke to him' \flushfill{(Old High German, Monsee Fragments 7:24, \citealt[761]{behaghel1923},}\\
+ \rightalign{gloss and translation by \citealt[199]{pittner1995})}
 \bg. gebe themo ni eigi\\
- give\scsub{[dat]} D-\tsc{m.sg.dat} not posses\scsub{[nom]}\\
- `give to the one who does not have' \hfill (Old High German, Otfrid I 24:77)\\
- `gebe dem der nicht hat' \hfill (Schrodt, 175)
+ give\scsub{[dat]} who.\tsc{dat} not posses\scsub{[nom]}\\
+ `give to the one who does not have' \flushfill{(Old High German, Otfrid I 24:77)}\\
+ `gebe dem der nicht hat' \flushfill{(translation by Schrodt, 175)}
 
 \ex. \tsc{int:acc}, \tsc{ext:nom}
 \a. \tsc{acc} not attested
@@ -87,8 +84,8 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
 \ex. \tsc{int:acc}, \tsc{ext:dat}
 \a. \tsc{acc} not attested
 \bg. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
- {are you} superior\scsub{[dat]} {to Abraham} also D-\tsc{dat.pl} one here now named\scsub{[acc]}\\
- `are you superior to Abraham to those which they just mentioned?' \hfill (Old High German, Otfrid III 18:33, \citealt[761]{behaghel1923})
+ {are you} superior\scsub{[dat]} {to Abraham} also who.\tsc{dat} one here now named\scsub{[acc]}\\
+ `are you superior to Abraham to those which they just mentioned?' \flushfill{(Old High German, Otfrid III 18:33, \citealt[761]{behaghel1923})}
 
 \ex. \tsc{int:dat}, \tsc{ext:nom}
 \a. \tsc{dat} not attested
@@ -107,141 +104,139 @@ Don't know:
 \ex. Old High German
 \ag. gaat uz diu halt za dem iz forchaufent\\
  \\
- `' \hfill (Old High German, Monsee Fragments 20,14, \citealt[761]{behaghel1923})
+ `' \flushfill{(Old High German, Monsee Fragments 20,14, \citealt[761]{behaghel1923})}
 \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
  \\
- `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \hfill (Old High German, Tatian 118,1, \citealt[761]{behaghel1923})
+ `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \flushfill{(Old High German, Tatian 118,1, \citealt[761]{behaghel1923})}
 \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
  \\
- `' \hfill (Old High German, Otfrid II,8,24, \citealt[761]{behaghel1923})
+ `' \flushfill{(Old High German, Otfrid II,8,24, \citealt[761]{behaghel1923})}
 \bg. thia laz ih themo iz lisit thar\\
  \\
- `' \hfill (Old High German, Otfrid I,19,25, \citealt[761]{behaghel1923})
+ `' \flushfill{(Old High German, Otfrid I,19,25, \citealt[761]{behaghel1923})}
 \bg. noh so neduohti in gnuoge des si habetin\\
  \\
- `' \hfill (Old High German, Notker I,63,29, \citealt[761]{behaghel1923})
+ `' \flushfill{(Old High German, Notker I,63,29, \citealt[761]{behaghel1923})}
 \bg. tannoh pito ih tes noh fore ist (id quod)\\
  \\
- `' \hfill (Old High German, Notker 193,19, \citealt[761]{behaghel1923})
+ `' \flushfill{(Old High German, Notker 193,19, \citealt[761]{behaghel1923})}
 
 So, to sum up:
+
 
 
 \begin{table}[h]
   \center
   \caption {Case attraction in headless relatives in Old High German}
-    \begin{minipage}{\linewidth}
-      \begin{tabularx}{\textwidth}{c|Y|Y|Y}
-        \toprule
-          \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
-              & \tsc{[nom]}
-              & \tsc{[acc]}
-              & \tsc{[dat]}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[nom]}
-              & \colorbox{LG}{\tsc{nom}}
-              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
-              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[acc]}
-              & \diagbox[linecolor=white]{?\tsc{acc}}{?\tsc{nom}}
-              &	\colorbox{LG}{\tsc{acc}}
-              &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[dat]}
-              & \diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{nom}}
-              &	\diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{acc}}
-              & \colorbox{LG}{\tsc{dat}}
-              \\
-        \bottomrule
-      \end{tabularx}
-    \end{minipage}
+    \begin{tabular}{c|c|c|c}
+			\toprule
+				\diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
+						& \tsc{[nom]}
+						& \tsc{[acc]}
+						& \tsc{[dat]}
+						\\ \cmidrule{1-4}
+				\tsc{[nom]}
+						& \colorbox{LG}{\tsc{nom}}
+						& \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
+						& \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
+						\\ \cmidrule{1-4}
+				\tsc{[acc]}
+						& \diagbox[linecolor=white]{?\tsc{acc}}{?\tsc{nom}}
+						&	\colorbox{LG}{\tsc{acc}}
+						&	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
+						\\ \cmidrule{1-4}
+				\tsc{[dat]}
+						& \diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{nom}}
+						&	\diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{acc}}
+						& \colorbox{LG}{\tsc{dat}}
+						\\
+			\bottomrule
+    \end{tabular}
 \end{table}
+
 
 
 
 \subsection{Modern German}
 
 \ex. \tsc{int:nom}, \tsc{ext:acc}
-\ag. *Ich {lade ein}, w-er mir sympathisch ist.\\
- I invite\scsub{[acc]} W-\tsc{m/f.sg.nom} me nice is\scsub{[nom]}\\
- `I invite who I like.' \hfill \citep[344]{vogel2001}
-\bg. *Ich {lade ein}, w-en mir sympathisch ist.\\
- I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} me nice is\scsub{[nom]}\\
- `I invite who I like.' \hfill \citep[344]{vogel2001}
+\ag. *Ich {lade ein}, wer mir sympathisch ist.\\
+ I invite\scsub{[acc]} who.\tsc{nom} me nice is\scsub{[nom]}\\
+ `I invite who I like.' \flushfill{\citep[344]{vogel2001}}
+\bg. *Ich {lade ein}, wen mir sympathisch ist.\\
+ I invite\scsub{[acc]} who.\tsc{acc} me nice is\scsub{[nom]}\\
+ `I invite who I like.' \flushfill{\citep[344]{vogel2001}}
 
 \ex. \tsc{int:nom}, \tsc{ext:dat}
-\ag. *Ich vertraue, w-er Hitchcock mag.\\
- I trust\scsub{[dat]} W-\tsc{m/f.sg.nom} Hitchcock likes\scsub{[nom]}\\
- `I trust who likes Hitchcock.' \hfill \citep[345]{vogel2001}
-\bg. *Ich vertraue, w-em Hitchcock mag.\\
- I trust\scsub{[dat]} W-\tsc{m/f.sg.dat} Hitchcock likes\scsub{[nom]}\\
- `I trust who likes Hitchcock.' \hfill \citep[345]{vogel2001}
+\ag. *Ich vertraue, wer Hitchcock mag.\\
+ I trust\scsub{[dat]} who.\tsc{nom} Hitchcock likes\scsub{[nom]}\\
+ `I trust who likes Hitchcock.' \flushfill{\citep[345]{vogel2001}}
+\bg. *Ich vertraue, wem Hitchcock mag.\\
+ I trust\scsub{[dat]} who.\tsc{dat} Hitchcock likes\scsub{[nom]}\\
+ `I trust who likes Hitchcock.' \flushfill{\citep[345]{vogel2001}}
 
 \ex. \tsc{int:acc}, \tsc{ext:nom}
-\ag. Uns besucht w-en Maria mag.\\
- Us visits\scsub{[nom]} W-\tsc{m/f.sg.acc} Maria.\tsc{nom} likes\scsub{[acc]}\\
- `Who visits us likes Maria likes.' \hfill \citep[343]{vogel2001}
-\bg. *Uns besucht w-er Maria mag.\\
- Us visits\scsub{[nom]} W-\tsc{m/f.sg.nom} Maria.\tsc{nom} likes\scsub{[acc]}\\
- `Who visits us likes Maria likes.' \hfill \citep[343]{vogel2001}
+\ag. Uns besucht wen Maria mag.\\
+ Us visits\scsub{[nom]} who.\tsc{acc} Maria.\tsc{nom} likes\scsub{[acc]}\\
+ `Who visits us likes Maria likes.' \flushfill{\citep[343]{vogel2001}}
+\bg. *Uns besucht wer Maria mag.\\
+ Us visits\scsub{[nom]} who.\tsc{nom} Maria.\tsc{nom} likes\scsub{[acc]}\\
+ `Who visits us likes Maria likes.' \flushfill{\citep[343]{vogel2001}}
 
  \ex. \tsc{int:acc}, \tsc{ext:dat}
-\ag. *Ich vertraue w-em auch Maria mag. \\
- I trust\scsub{[dat]} W-\tsc{m/f.sg.dat} also Maria likes\scsub{[acc]}.\\
- `I trust whoever Maria also likes.' \hfill \citep[345]{vogel2001}
-\bg. *Ich vertraue w-en auch Maria mag. \\
- I trust\scsub{[dat]} W-\tsc{m/f.sg.acc} also Maria likes\scsub{[acc]}.\\
- `I trust whoever Maria also likes.' \hfill \citep[345]{vogel2001}
+\ag. *Ich vertraue wem auch Maria mag. \\
+ I trust\scsub{[dat]} who.\tsc{dat} also Maria likes\scsub{[acc]}.\\
+ `I trust whoever Maria also likes.' \flushfill{\citep[345]{vogel2001}}
+\bg. *Ich vertraue wen auch Maria mag. \\
+ I trust\scsub{[dat]} who.\tsc{acc} also Maria likes\scsub{[acc]}.\\
+ `I trust whoever Maria also likes.' \flushfill{\citep[345]{vogel2001}}
 
 \ex. \tsc{int:dat}, \tsc{ext:nom}
-\ag. Uns besucht w-em Maria vertraut.\\
- us visits\scsub{[nom]} W-\tsc{m/f.sg.dat} Maria trusts\scsub{[dat]}\\
- `Who visits us, Maria trusts.' \hfill \citep[343]{vogel2001}
-\bg. *Uns besucht w-er Maria vertraut.\\
- us visits\scsub{[nom]} W-\tsc{m/f.sg.dat} Maria trusts\scsub{[dat]}\\
- `Who visits us, Maria trusts.' \hfill \citep[343]{vogel2001}
+\ag. Uns besucht wem Maria vertraut.\\
+ us visits\scsub{[nom]} who.\tsc{dat} Maria trusts\scsub{[dat]}\\
+ `Who visits us, Maria trusts.' \flushfill{\citep[343]{vogel2001}}
+\bg. *Uns besucht wer Maria vertraut.\\
+ us visits\scsub{[nom]} who.\tsc{nom} Maria trusts\scsub{[dat]}\\
+ `Who visits us, Maria trusts.' \flushfill{\citep[343]{vogel2001}}
 
 \ex. \tsc{int:dat}, \tsc{ext:acc}
-\ag. Ich {lade ein} w-em auch Maria vertraut. \\
- I invite\scsub{[acc]} W-\tsc{m/f.sg.dat} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \hfill \citep[344]{vogel2001}
-\bg. *Ich {lade ein} w-en auch Maria vertraut. \\
- I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \hfill \citep[344]{vogel2001}
+\ag. Ich {lade ein} wem auch Maria vertraut. \\
+ I invite\scsub{[acc]} who.\tsc{dat} also Maria trusts\scsub{[dat]}.\\
+ `I invite whoever Maria also trusts.' \flushfill{\citep[344]{vogel2001}}
+\bg. *Ich {lade ein} wen auch Maria vertraut. \\
+ I invite\scsub{[acc]} who.\tsc{acc} also Maria trusts\scsub{[dat]}.\\
+ `I invite whoever Maria also trusts.' \flushfill{\citep[344]{vogel2001}}
 
-\subsubsection{Summary of the data}
 
-\begin{table}[h]
-  \center
-  \caption {Case attraction in headless relatives in Modern German}
-    \begin{minipage}{\linewidth}
-      \begin{tabularx}{\textwidth}{c|Y|Y|Y}
-        \toprule
-          \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
-              & \tsc{[nom]}
-              & \tsc{[acc]}
-              & \tsc{[dat]}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[nom]}
-              & \colorbox{LG}{\tsc{nom}}
-              & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}}
-              & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[acc]}
-              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{*\tsc{nom}}
-              &	\colorbox{LG}{\tsc{acc}}
-              &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}}
-              \\ \cmidrule(lr){1-4}
-          \tsc{[dat]}
-              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{nom}}
-              &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{acc}}
-              & \colorbox{LG}{\tsc{dat}}
-              \\
-        \bottomrule
-      \end{tabularx}
-    \end{minipage}
-\end{table}
+ \begin{table}[h]
+   \center
+   \caption {Case attraction in headless relatives in Old High German}
+     \begin{tabular}{c|c|c|c}
+			 \toprule
+				 \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
+						 & \tsc{[nom]}
+						 & \tsc{[acc]}
+						 & \tsc{[dat]}
+						 \\ \cmidrule{1-4}
+				 \tsc{[nom]}
+						 & \colorbox{LG}{\tsc{nom}}
+						 & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}}
+						 & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}}
+						 \\ \cmidrule{1-4}
+				 \tsc{[acc]}
+						 & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{*\tsc{nom}}
+						 &	\colorbox{LG}{\tsc{acc}}
+						 &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}}
+						 \\ \cmidrule{1-4}
+				 \tsc{[dat]}
+						 & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{nom}}
+						 &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{acc}}
+						 & \colorbox{LG}{\tsc{dat}}
+						 \\
+			 \bottomrule
+     \end{tabular}
+ \end{table}
+
 
 
 
@@ -260,74 +255,66 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
 \begin{table}[h]\label{tbl:paradigmohg}
 	\center
 	\caption {Old High German relative pronouns in headless relatives}
-	\begin{minipage}{0.85\linewidth}
-		\begin{tabularx}{\textwidth}{c *{6}{Y}}
+		\begin{tabular}{cccc}
 		\toprule
-		\tsc{sg}	& \tsc{f}          & \tsc{m}           & \tsc{n}    \\
-		\midrule
-		\tsc{nom} & d-iu             & d-ër       	     & d-aȥ				\\
-		\tsc{acc}	& d-ea/-ia/(-ie)   & d-ën				       & d-aȥ		    \\
-		\tsc{dat}	& d-ëru/-ëro	     & d-ëmu/-ëmo	       & d-ëmu/-ëmo \\
+							& \tsc{n.sg}	    & \tsc{m.sg}  & \tsc{f.sg}			\\
+								\cmidrule{2-4}
+		\tsc{nom} & d-aȥ          	& d-ër       	& d-iu						\\
+		\tsc{acc}	& d-aȥ   					& d-ën				& d-ea/-ia/(-ie)	\\
+		\tsc{dat}	& d-ëmu/-ëmo	    & d-ëmu/-ëmo	& d-ëru/-ëro			\\
 		\bottomrule
-    \toprule
-    \tsc{pl}	& \tsc{f}          & \tsc{m}           & \tsc{n}    \\
-    \midrule
-    \tsc{nom} & d-eo/-io         &  d-ē/-ea/-ia/-ie  & d-iu/-ei   \\
-    \tsc{acc} & d-eo/-io         &  d-ē/-ea/-ia/-ie  & d-iu/-ei   \\
-    \tsc{dat} & d-ēm/-ēn         &  d-ēm/-ēn         & d-ēm/-ēn   \\
+	    				& \tsc{n.pl} & \tsc{m.pl}       & \tsc{f.pl}      \\
+	    					\cmidrule{2-4}
+    \tsc{nom} & d-iu/-ei   &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
+    \tsc{acc} & d-iu/-ei   &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
+    \tsc{dat} & d-ēm/-ēn   &  d-ēm/-ēn        & d-ēm/-ēn        \\
     \bottomrule
-		\end{tabularx}
-	\end{minipage}
+		\end{tabular}
 \end{table}
 
 
 \subsection{Gothic}
 
-\begin{table}[h]\label{tbl:paradigmgothic}
+\begin{table}[h]
 	\center
 	\caption {Gothic relative pronouns in headless relatives}
-	\begin{minipage}{0.7\linewidth}
-		\begin{tabularx}{\textwidth}{c *{4}{Y}}
+		\begin{tabular}{cccc}
 		\toprule
-		\tsc{sg}	& \tsc{f}   & \tsc{m}   & \tsc{n}  \\
-		\midrule
-    \tsc{nom} & s-ō-ei 	  & s-a-ei 		& þ-at-ei	 \\
-    \tsc{acc} & þ-ō-ei    & þ-an-ei  	& þ-at-ei  \\
-    \tsc{dat} & þ-izái-ei & þ-amm-ei	& þ-amm-ei \\
+							& \tsc{n.sg} 	& \tsc{m.sg}	& \tsc{f.sg}   \\
+		 						\cmidrule{2-4}
+    \tsc{nom} & þ-at-ei 	 	& s-a-ei 			& s-ō-ei			\\
+    \tsc{acc}	& þ-at-ei    	& þ-an-ei  		& þ-ō-ei  		\\
+    \tsc{dat} & þ-amm-ei 		& þ-amm-ei		& þ-izái-ei 	\\
 		\bottomrule
-    \toprule
-    \tsc{pl}	& \tsc{f} 	& \tsc{m}		& \tsc{n}		\\
-    \midrule
-    \tsc{nom} &	þ-ōz-ei		&	þ-ái-ei		& þ-ō-ei   	\\
-    \tsc{acc} &	þ-ōz-ei		&	þ-anz-ei	& þ-ō-ei   	\\
-    \tsc{dat} &	þ-áim-ei	&	þ-áim-ei 	& þ-áim-ei	\\
+    					& \tsc{n.pl}	& \tsc{m.pl}	& \tsc{f.pl}	\\
+						    \cmidrule{2-4}
+    \tsc{nom} & þ-ō-ei			&	þ-ái-ei			&	þ-ōz-ei			\\
+    \tsc{acc} & þ-ō-ei 			&	þ-anz-ei		&	þ-ōz-ei			\\
+    \tsc{dat} & þ-áim-ei		&	þ-áim-ei 		&	þ-áim-ei 		\\
     \bottomrule
-		\end{tabularx}
-	\end{minipage}
+		\end{tabular}
 \end{table}
 
 
 \subsection{Modern German}
 
-\begin{table}[h]\label{tbl:paradigmg}
+\begin{table}[h]
 	\center
 	\caption {Modern German relative pronouns in headless relatives}
-	\begin{minipage}{0.4\linewidth}
-		\begin{tabularx}{\textwidth}{c *{3}{Y}}
+		\begin{tabular}{ccc}
 		\toprule
-		\tsc{sg}	& \tsc{f/m} & \tsc{n}  \\
-		\midrule
-    \tsc{nom}  & w-er   	& w-as     \\
-    \tsc{acc}  & w-en   	& w-as     \\
-    \tsc{dat}  & w-em   	&  		     \\
+							& \tsc{inan}	& \tsc{an}	\\
+								\cmidrule{2-3}
+    \tsc{nom} & w-as    		& w-er   		\\
+    \tsc{acc} & w-as    		& w-en   		\\
+    \tsc{dat} & -  					& w-em    	\\
 		\bottomrule
-		\end{tabularx}
-	\end{minipage}
+		\end{tabular}
 \end{table}
 
-  \section{Analysis}
+\section{Analysis}
 
-    \subsection{Old High German}
+\subsection{Old High German}
 In Old High German, proper attraction in headless relatives can be derived from headed relatives. The relative pronoun is the determiner from the main clause. Under a double-headed Cinque-analysis, it is the internal DP that is deleted.
 
 
@@ -336,7 +323,7 @@ In Old High German, proper attraction in headless relatives can be derived from 
 \ex. \tsc{acc} instead of \tsc{nom}
 \ag. unde ne wolden níet besên den mort den dô was geschên\\
  and not wanted not see the murder.\tsc{acc} that.\tsc{acc} there had happened\\
- `and they didn't want to see the murder that had happened.' \hfill (Middle High German, Nibelungenlied 1391,14, \citealt[756]{behaghel1923}, glosses and translation by \citealt[198]{pittner1995})
+ `and they didn't want to see the murder that had happened.' \flushfill{(Middle High German, Nibelungenlied 1391,14, \citealt[756]{behaghel1923}, glosses and translation by \citealt[198]{pittner1995})}
 
 
 
