--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -2,7 +2,7 @@
 \usepackage{libertine}%font supporting unicode
 \usepackage[normalem]{ulem}%strikethrough
 
-\OnehalfSpacing
+\OnehalfSpacing*
 
 %%%depth up to subsections also in toc%%%
 \setcounter{secnumdepth}{4}
